--- a/en/404.html
+++ b/en/404.html
@@ -12,12 +12,12 @@
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>@@title - University of Vedic Sciences</title>
+  <title>@@title - University of Applied Vēdic Sciences</title>
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="University of Vedic Sciecnes Website">
+  <meta name="description" content="University of Applied Vēdic Sciecnes Website">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="University of Vedic Sciecnes IT Team">
+  <meta name="author" content="University of Applied Vēdic Sciecnes IT Team">
     
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="/assets/plugins/bootstrap/bootstrap.min.css">
