--- a/en/academics.html
+++ b/en/academics.html
@@ -12,12 +12,12 @@
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>Academics - University of Vedic Sciences</title>
+  <title>Academics - University of Applied Vēdic Sciences</title>
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="University of Vedic Sciecnes Website">
+  <meta name="description" content="University of Applied Vēdic Sciecnes Website">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="University of Vedic Sciecnes IT Team">
+  <meta name="author" content="University of Applied Vēdic Sciecnes IT Team">
     
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="/assets/plugins/bootstrap/bootstrap.min.css">
@@ -37,16 +37,16 @@
 <div class="bg-white">
   <div class="container">
     <h3 class="text-center p-2">
-      University of Applied Vedic Sciences (Online)
+      University of Applied Vēdic Sciences (Online)
     </h3>
   </div>
 </div>
 -->
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">    
-    <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
+    <div class="text-white text-center d-block d-sm-none">University of Applied Vēdic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vēdic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -107,9 +107,9 @@
         (4) <a class="course" href="/en/courses/brahmanas.html#B-04">Atharvavēda Brāhmanās (B-04)</a>
       </li>
       <li class="list-inline-item pb-4 align-top">        
-        <label class="font-weight-bold text-primary">Upavedas (4)</label> <br/>
-        (1) <a class="course" href="/en/courses/upavedas.html#UV-01">Ayurveda (UV-01)</a><br/>
-        (2) <a class="course" href="/en/courses/upavedas.html#UV-02">Dhanurveda (UV-02)</a><br/>
+        <label class="font-weight-bold text-primary">Upavēdas (4)</label> <br/>
+        (1) <a class="course" href="/en/courses/upavedas.html#UV-01">Ayurvēda (UV-01)</a><br/>
+        (2) <a class="course" href="/en/courses/upavedas.html#UV-02">Dhanurvēda (UV-02)</a><br/>
         (3) <a class="course" href="/en/courses/upavedas.html#UV-03">Ghandarva Vidya (UV-03)</a><br/>
         (4) <a class="course" href="/en/courses/upavedas.html#UV-04">Artha Vēda or <br/> Shilpa Vidya (UV-04)</a>
       </li>
@@ -164,8 +164,8 @@
         (4) <a class="course" href="/en/courses/software-courses.html#S-04">Python Programming (S-04)</a>
       </li>
       <li class="list-inline-item pb-4 align-top">
-        <label class="font-weight-bold text-primary">Applied Vedic Sciences (15)</label> <br/>
-        <a class="course" href="/en/courses/applied-vedic-sciences.html">Applied Vedic Sciences (AV-01 to AV-15)</a>
+        <label class="font-weight-bold text-primary">Applied Vēdic Sciences (15)</label> <br/>
+        <a class="course" href="/en/courses/applied-vedic-sciences.html">Applied Vēdic Sciences (AV-01 to AV-15)</a>
       </li>
   </ul>   
 </div>
@@ -214,8 +214,8 @@
             <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
           </a>         
           -->
-          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
-            organization with emphasis on outcome-driven real-world projects.</p>
+          <p>University of Applied Vēdic Sciences (online) is a research-oriented academic 
+            organization with emphasis on outcome-driven real-world projects extracted from Vēdas and Shāstrās.</p>
 
             <p class="pt-2 font-weight-bold">Vēdas are the knowledge of God and everyone in the universe is eligible to read Vēdas.</p>
         </div>
@@ -223,10 +223,8 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>About</h4>
-          <ul>
-            <li><a href="/en/about.html">About</a></li>
-            <li><a href="/en/founder.html">Founder</a></li>            
-            <li><a href="/en/faculty.html">Faculty</a></li>
+          <ul>            
+            <li><a href="/en/founder.html">Founder</a></li>      
             <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
@@ -235,9 +233,7 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>Links</h4>
-          <ul>
-            <li><a href="/en/academics.html">Academics</a></li>
-            <li><a href="/en/contact.html">Contact</a></li>
+          <ul>              
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
            </ul>
@@ -246,7 +242,7 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedas.university</p>
         </div>
       </div>
     </div>
