--- a/en/courses/brahmanas.html
+++ b/en/courses/brahmanas.html
@@ -12,12 +12,12 @@
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>Academics - Puranas - University of Vedic Sciences</title>
+  <title>Academics - Puranas - University of Applied Vēdic Sciences</title>
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="University of Vedic Sciecnes Website">
+  <meta name="description" content="University of Applied Vēdic Sciecnes Website">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="University of Vedic Sciecnes IT Team">
+  <meta name="author" content="University of Applied Vēdic Sciecnes IT Team">
     
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="/assets/plugins/bootstrap/bootstrap.min.css">
@@ -37,16 +37,16 @@
 <div class="bg-white">
   <div class="container">
     <h3 class="text-center p-2">
-      University of Applied Vedic Sciences (Online)
+      University of Applied Vēdic Sciences (Online)
     </h3>
   </div>
 </div>
 -->
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">    
-    <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
+    <div class="text-white text-center d-block d-sm-none">University of Applied Vēdic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vēdic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -101,7 +101,7 @@
                     Soma Sacrifice (fire sacrifice ritual) and in the last two panchikās describe about Rājyābhishēka.                 
                 </p>
                 <p>
-                    Aitarēya Āranyaka belongs to the Shākala recension of the Rigveda and it is divided into five major segments, 
+                    Aitarēya Āranyaka belongs to the Shākala recension of the Rigvēda and it is divided into five major segments, 
                     known as Āranyakās. 
                 </p>
                 <p>
@@ -109,7 +109,7 @@
                     Ukthās and the Upanishadic text, third Āranyaka about spiritual meaning of various interpretation of the 
                     Samhitas including padapāta, kramapātha etc. for recitation of the Vēda mantras along with the Svarās, 
                     fourth Āranyaka about collection of Mahānāmni verses and the fifth Āranyaka deals about mystic Shāstrās. 
-                    The Aranyaka signifies symbolic meaning of the Vedic sacrifices. 
+                    The Aranyaka signifies symbolic meaning of the Vēdic sacrifices. 
                 </p>
                 <p>
                     The fourth, fifth and sixth chapter of the 
@@ -122,7 +122,7 @@
 
                 <h5 class="pt-4 pb-4 font-weight-bold">Kaushitaki  (Shankhayana) Brāhmana</h5>
                 <p>
-                    Kaushitaki Brāhmana associated with Bāskala Shākha of Rigveda and is also called as Sankhyāyana Brāhmana. 
+                    Kaushitaki Brāhmana associated with Bāskala Shākha of Rigvēda and is also called as Sankhyāyana Brāhmana. 
                     It is divided into thirty chapters and 226 Khāndas. The first six chapters dealing with food sacrifice and 
                     the remaining to Soma sacrifice. This work is ascribed to Sankhyāyana or Kaushitaki. The feature of 
                     Sankhyāyana-Brahmana is that in addition to the Aitharēya, there is also the interpretation of 
@@ -139,7 +139,7 @@
 
                 <h5 class="pt-4 pb-4 font-weight-bold">Shatapatha Brāhmana</h5>
                 <p>
-                    Shatapatha Brāhmana, Mādhyandina recension belongs to Shukla Yajurveda. It is divided into 14 Kāndas, 
+                    Shatapatha Brāhmana, Mādhyandina recension belongs to Shukla Yajurvēda. It is divided into 14 Kāndas, 
                     100 Adhyāyās, 68 Prapātakās, 436 Brāhmanās and 7179 Kandikās. The tenth Kānda is called Agnirahasya, 
                     eleventh is Ashtādhyāyi and Kāndas twelfth to fourteenth are called Parisishta.
                 </p>     
@@ -153,14 +153,14 @@
 
                 <h5 class="pt-4 pb-4 font-weight-bold">Taittiriya Brāhmana</h5>
                 <p>
-                    Taittiriya Brāhmana belongs to Krishna Yajurveda and divided into three khandas. 
+                    Taittiriya Brāhmana belongs to Krishna Yajurvēda and divided into three khandas. 
                     It is considered that part of the Kataka Brahmana is also included in this shākha. 
                     It has both mixed of mantras and Brahmans and composed in poetic and prose manner. It has three ashtakās. 
                 </p>   
 
                 <h5 class="pt-4 pb-4 font-weight-bold">Taittiriya Brāhmana</h5>
                 <p>
-                    The Taittiriya Aranyaka is associated with Taittiriya recension of the Krishna Yajurveda and divided into ten chapters.
+                    The Taittiriya Aranyaka is associated with Taittiriya recension of the Krishna Yajurvēda and divided into ten chapters.
                 </p>
                 <p>It deals with style of fire-brick pilling, Mahā Yajnās, recitation of the Vēdas 
                     (including sacred thread, daily prayer, sacrifice to the ancestors and the Brahma Yajna), 
@@ -183,7 +183,7 @@
 
                 <h5 class="pt-4 pb-4 font-weight-bold">Tāndya Mahā Brāhmana</h5>
                 <p>
-                    Tāndya Mahā Brāhmana or Panchavimsa Brāhmana belongs to both Kauthuma and Ranayaniya Shākha of the Sāmaveda. 
+                    Tāndya Mahā Brāhmana or Panchavimsa Brāhmana belongs to both Kauthuma and Ranayaniya Shākha of the Sāmavēda. 
                     It is consisting of twenty-five prapāthakās and 347 khāndas.
                 </p>
                 <p>Tāndya Brāhmana describes about Jyotishtōma, Ukthya, Atirātra, Prakrtis of ekāhas and ahinās, 
@@ -194,14 +194,14 @@
                 </p>  
 
                 <h5 class="pt-4 pb-4 font-weight-bold">Shadavimsa Brāhmana</h5>
-                <p>Shadavimsa Brāhmana belongs to Samaveda and divided into five Prapātakās. 
+                <p>Shadavimsa Brāhmana belongs to Samavēda and divided into five Prapātakās. 
                     It is considered as an appendix to the Panchavimsha Brāhmana and its twenty-sixth prapātaka. 
                     It consists of five prapātakās and divided into 7, 10, 12,7,12 khandas in the respectively.
                 </p>
                 
                 <h5 class="pt-4 pb-4 font-weight-bold">Sāma Vidhana Brāhmana</h5>
                 <p>
-                    Sāma Vidhana Brāhmana is associated with Samaveda. It consists of three prapātakās and divided 
+                    Sāma Vidhana Brāhmana is associated with Samavēda. It consists of three prapātakās and divided 
                     into 8, 8, and 9 khandas respectively. Totally, there are twenty-five khandas. 
                     It deals about abhichārās.                    
                 </p>
@@ -216,7 +216,7 @@
                 <h5 class="pt-4 pb-4 font-weight-bold">Dēvatadhyāya Brāhmana</h5>
                 <p>
                     Dēvatadhyāya Brāhmana is related to Sāma Vēda and is divided into 3 khandas, 
-                    having 26, 11 and 25 kandikās respectively. It describes about the Chandas (Vedic metres).                  
+                    having 26, 11 and 25 kandikās respectively. It describes about the Chandas (Vēdic metres).                  
                 </p>
 
                 <h5 class="pt-4 pb-4 font-weight-bold">Chāndogya Brāhmana</h5>
@@ -304,8 +304,8 @@
             <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
           </a>         
           -->
-          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
-            organization with emphasis on outcome-driven real-world projects.</p>
+          <p>University of Applied Vēdic Sciences (online) is a research-oriented academic 
+            organization with emphasis on outcome-driven real-world projects extracted from Vēdas and Shāstrās.</p>
 
             <p class="pt-2 font-weight-bold">Vēdas are the knowledge of God and everyone in the universe is eligible to read Vēdas.</p>
         </div>
@@ -313,10 +313,8 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>About</h4>
-          <ul>
-            <li><a href="/en/about.html">About</a></li>
-            <li><a href="/en/founder.html">Founder</a></li>            
-            <li><a href="/en/faculty.html">Faculty</a></li>
+          <ul>            
+            <li><a href="/en/founder.html">Founder</a></li>      
             <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
@@ -325,9 +323,7 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>Links</h4>
-          <ul>
-            <li><a href="/en/academics.html">Academics</a></li>
-            <li><a href="/en/contact.html">Contact</a></li>
+          <ul>              
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
            </ul>
@@ -336,7 +332,7 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedas.university</p>
         </div>
       </div>
     </div>
