--- a/en/profiles/prabhakara-sharma.html
+++ b/en/profiles/prabhakara-sharma.html
@@ -12,12 +12,12 @@
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>Founder - University of Vedic Sciences</title>
+  <title>Founder - University of Applied Vēdic Sciences</title>
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="University of Vedic Sciecnes Website">
+  <meta name="description" content="University of Applied Vēdic Sciecnes Website">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="University of Vedic Sciecnes IT Team">
+  <meta name="author" content="University of Applied Vēdic Sciecnes IT Team">
     
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="/assets/plugins/bootstrap/bootstrap.min.css">
@@ -37,16 +37,16 @@
 <div class="bg-white">
   <div class="container">
     <h3 class="text-center p-2">
-      University of Applied Vedic Sciences (Online)
+      University of Applied Vēdic Sciences (Online)
     </h3>
   </div>
 </div>
 -->
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">    
-    <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
+    <div class="text-white text-center d-block d-sm-none">University of Applied Vēdic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vēdic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -103,13 +103,13 @@
         <img src="/assets/images/profiles/prabhakara_sharma.jpg" alt="" class="img-fluid w-100 align-baseline">
       </div>
       <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
-        <h3 class="mb-3">Advisory Board Member: <br/>Prabhakara Sharma, M.A., LL.M. M.Phil</h3>
+        <h3 class="mb-3">Advisory Board Member: <br/>Arrojhwala Prabhakara Sharma, M.A., LL.M. M.Phil</h3>
         <p class="mb-4">
           During the period from 1991 to 1997, Prabhakara Shrma Ji served as Principal for Justice Kumarayya College of Law, 
           Karimnagar, Telangana, India and taught, C.P.C, Transfer of property Act, Law of Torts and Indian contract Act.
         </p>
         <p> 
-          Prabhakara Sharma Ji learned four Vedas, Brahmanas, six darshanas, eleven Upanishads, Ramayana & Mahabarata, under the 
+          Prabhakara Sharma Ji learned four Vēdas, Brahmanas, six darshanas, eleven Upanishads, Ramayana & Mahabarata, under the 
           supreme guidance of pandit Venkateshwara Sastry Ji.
         </p>       
 
@@ -132,8 +132,8 @@
             <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
           </a>         
           -->
-          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
-            organization with emphasis on outcome-driven real-world projects.</p>
+          <p>University of Applied Vēdic Sciences (online) is a research-oriented academic 
+            organization with emphasis on outcome-driven real-world projects extracted from Vēdas and Shāstrās.</p>
 
             <p class="pt-2 font-weight-bold">Vēdas are the knowledge of God and everyone in the universe is eligible to read Vēdas.</p>
         </div>
@@ -141,10 +141,8 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>About</h4>
-          <ul>
-            <li><a href="/en/about.html">About</a></li>
-            <li><a href="/en/founder.html">Founder</a></li>            
-            <li><a href="/en/faculty.html">Faculty</a></li>
+          <ul>            
+            <li><a href="/en/founder.html">Founder</a></li>      
             <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
@@ -153,9 +151,7 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>Links</h4>
-          <ul>
-            <li><a href="/en/academics.html">Academics</a></li>
-            <li><a href="/en/contact.html">Contact</a></li>
+          <ul>              
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
            </ul>
@@ -164,7 +160,7 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedas.university</p>
         </div>
       </div>
     </div>
