--- a/en/courses/upavedas.html
+++ b/en/courses/upavedas.html
@@ -12,12 +12,12 @@
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>Academics - Puranas - University of Vedic Sciences</title>
+  <title>Academics - Puranas - University of Applied Vēdic Sciences</title>
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="University of Vedic Sciecnes Website">
+  <meta name="description" content="University of Applied Vēdic Sciecnes Website">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="University of Vedic Sciecnes IT Team">
+  <meta name="author" content="University of Applied Vēdic Sciecnes IT Team">
     
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="/assets/plugins/bootstrap/bootstrap.min.css">
@@ -37,16 +37,16 @@
 <div class="bg-white">
   <div class="container">
     <h3 class="text-center p-2">
-      University of Applied Vedic Sciences (Online)
+      University of Applied Vēdic Sciences (Online)
     </h3>
   </div>
 </div>
 -->
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">    
-    <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
+    <div class="text-white text-center d-block d-sm-none">University of Applied Vēdic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vēdic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -86,7 +86,7 @@
         <div class="pt-4 pb-4">
                 <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
         </div>
-        <h3 class="pt-4 pb-4">Academic Courses in Upavedas (4)</h3>
+        <h3 class="pt-4 pb-4">Academic Courses in Upavēdas (4)</h3>
         <p>
             The term Upa-Vēda (“applied knowledge”) is used in traditional literature to designate the subjects of certain 
             technical works. Lists of what subjects are included in this class differ among sources. 
@@ -99,7 +99,7 @@
         </p>
         <ul>
             <li>
-                <h4  id="UV-01" class="text-primary">1. Ayurveda (UV-01)</h4>
+                <h4  id="UV-01" class="text-primary">1. Ayurvēda (UV-01)</h4>
                 <p>             
                     Āyurvēda (Medical Sciences associated with Rig Vēda).      
                 </p>      
@@ -109,7 +109,7 @@
             </li>
 
             <li>
-                <h4  id="UV-02" class="text-primary">2. Dhanurveda (UV-02)</h4>
+                <h4  id="UV-02" class="text-primary">2. Dhanurvēda (UV-02)</h4>
                 <p>         
                     Dhanurvēda (Warfare associated with Yajur Vēda).          
                 </p>    
@@ -156,8 +156,8 @@
             <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
           </a>         
           -->
-          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
-            organization with emphasis on outcome-driven real-world projects.</p>
+          <p>University of Applied Vēdic Sciences (online) is a research-oriented academic 
+            organization with emphasis on outcome-driven real-world projects extracted from Vēdas and Shāstrās.</p>
 
             <p class="pt-2 font-weight-bold">Vēdas are the knowledge of God and everyone in the universe is eligible to read Vēdas.</p>
         </div>
@@ -165,10 +165,8 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>About</h4>
-          <ul>
-            <li><a href="/en/about.html">About</a></li>
-            <li><a href="/en/founder.html">Founder</a></li>            
-            <li><a href="/en/faculty.html">Faculty</a></li>
+          <ul>            
+            <li><a href="/en/founder.html">Founder</a></li>      
             <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
@@ -177,9 +175,7 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>Links</h4>
-          <ul>
-            <li><a href="/en/academics.html">Academics</a></li>
-            <li><a href="/en/contact.html">Contact</a></li>
+          <ul>              
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
            </ul>
@@ -188,7 +184,7 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedas.university</p>
         </div>
       </div>
     </div>
