--- a/en/profiles/sarada-sonty.html
+++ b/en/profiles/sarada-sonty.html
@@ -12,12 +12,12 @@
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>Founder - University of Vedic Sciences</title>
+  <title>Founder - University of Applied Vēdic Sciences</title>
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="University of Vedic Sciecnes Website">
+  <meta name="description" content="University of Applied Vēdic Sciecnes Website">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="University of Vedic Sciecnes IT Team">
+  <meta name="author" content="University of Applied Vēdic Sciecnes IT Team">
     
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="/assets/plugins/bootstrap/bootstrap.min.css">
@@ -37,16 +37,16 @@
 <div class="bg-white">
   <div class="container">
     <h3 class="text-center p-2">
-      University of Applied Vedic Sciences (Online)
+      University of Applied Vēdic Sciences (Online)
     </h3>
   </div>
 </div>
 -->
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">    
-    <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
+    <div class="text-white text-center d-block d-sm-none">University of Applied Vēdic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vēdic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -105,23 +105,23 @@
       <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
         <h3 class="mb-3">Advisory Board Member: <br/>Dr. Sarada Purna Susarla - Sonty PhD</h3>
         <p class="mb-4">
-          Born in Hill Town Tirupathi in 1951 in a traditional Vedic Family, raised in Coastal city Visakhapatnam in South India,   
+          Born in Hill Town Tirupathi in 1951 in a traditional Vēdic Family, raised in Coastal city Visakhapatnam in South India,   
           Sarada Purna received her initial Sanskrit training under her Grand Father  Brahmasri Susarla Surya Bhagavat Sankara Sastry, 
-          a Vedic, Sanskrit, English Scholar, continued her advanced studies under the guidance of Brahmasri Ramavarapu Sarat Babu. 
-          Committed Tutelage for over two decades under Vedic Scholar Brahmasri Viswanadha Achyutha Devarayalu, 
-          has given her the essential interdisciplinary orientation to study contemporary Vedic thought, 
-          and reinterpret  <b>Veda Akshara</b> in terms of contemporary developments in the studies of Vedic Texts. 
+          a Vēdic, Sanskrit, English Scholar, continued her advanced studies under the guidance of Brahmasri Ramavarapu Sarat Babu. 
+          Committed Tutelage for over two decades under Vēdic Scholar Brahmasri Viswanadha Achyutha Devarayalu, 
+          has given her the essential interdisciplinary orientation to study contemporary Vēdic thought, 
+          and reinterpret  <b>Vēda Akshara</b> in terms of contemporary developments in the studies of Vēdic Texts. 
           The proximity and having personal coaching and dialogues with Brahmasri Remilla Surya Prakasa Sastry varya, 
-          Brahmasri Thangirala Bala Gangadhara Sastry Varya -celebrated Veda Panditha of present times guided Sarada 
+          Brahmasri Thangirala Bala Gangadhara Sastry Varya -celebrated Vēda Panditha of present times guided Sarada 
           to think original and propound Akshara Theory. 
         </p>
         <p>
-          A foremost thinker in the field of Indian Art Traditions, Vedic-Vedanta studies, broad based in several humanistic, 
+          A foremost thinker in the field of Indian Art Traditions, Vēdic-Vēdanta studies, broad based in several humanistic, 
           Indological disciplines, and interfaith interactions.  Dr. Sarada Purna Sonty is a poet, Singer, scholar, 
           published 24 Books envisioning repositioning ancient wisdom and knowledge, wrote commentaries of Sanskrit works, 
           editorials for Souvenirs & Centenary volumes. Sarada received PhD in Telugu, PhD in Sanskrit &  
           submitted  Thesis for  D Litt in Interdisciplinary musicology . At present She is researching and working 
-          on	 <b>Studies on Unitary Sound Syllable</b> – Akshara and Vedic View  titled  - <b>Aksharapadeeyam</b>. 
+          on	 <b>Studies on Unitary Sound Syllable</b> – Akshara and Vēdic View  titled  - <b>Aksharapadeeyam</b>. 
           She also gained degrees and certifications in Child Psychology, Montessori training, Alternate Medical therapies, 
           Associate medical, Pharmaceutical studies.   
         </p>
@@ -130,7 +130,7 @@
           	<li><b>Nadanandam</b> – Genesis, History and Evolution of Sanskrit Music Treatises </li>	 
           <li><b>Thallapaka Annamacharyini Nritya Sangita Kalabhijnatha</b> Research work on Annamacharya compositions</li> 									 
           <li><b>Purnamidam</b> Research work on  Human Expression, Evolution of Fine Arts World view</li> 												 
-          <li><b>Pratheechi Naimisham</b> Philosophical essays, Vedasnthic thought Musings</li> 	 
+          <li><b>Pratheechi Naimisham</b> Philosophical essays, Vēdasnthic thought Musings</li> 	 
           <li><b>Kalidasa Meghadutam</b> Translation in to Telugu with Commentary , Coauthored with Prof. Dr. Sarata Babu Ramavarapu</li> 						 	  
           <li><b>Chankya Neeti Sahasri</b> 1000 Maxims of Chanakya in Telugu, Coauthored with Prof. Dr. Sarat babu Ramavarapu</li>								  
           <li><b>Sharannikvaanam</b> - <b>Sharajjhari</b> - <b>Sharadyuthi</b> – Poetry Anthology Telugu Primer, Sanskrit Primer, Music Primer</li>
@@ -139,7 +139,7 @@
         <p class="pt-4 pb-4">
           Sarada Sonty  Founded  SAPNA- 501C3, SRI  foundation  promoting Cultural Art Traditions of India for 35 years. 
           Dr. Sarada established Veena Global Council in 2009,  Director for Center for Telugu Studies, 
-          Founder and President <b>Veda Vidya Parishad</b>, Owner, Editor for <b>Brahmi</b> Journal, Owner and Chief Editor for 
+          Founder and President <b>Vēda Vidya Parishad</b>, Owner, Editor for <b>Brahmi</b> Journal, Owner and Chief Editor for 
           Sonty Publications, Founding member  for Vegesna School Hyderabad for Physically disabled. 
         </p>
 
@@ -174,8 +174,8 @@
             <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
           </a>         
           -->
-          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
-            organization with emphasis on outcome-driven real-world projects.</p>
+          <p>University of Applied Vēdic Sciences (online) is a research-oriented academic 
+            organization with emphasis on outcome-driven real-world projects extracted from Vēdas and Shāstrās.</p>
 
             <p class="pt-2 font-weight-bold">Vēdas are the knowledge of God and everyone in the universe is eligible to read Vēdas.</p>
         </div>
@@ -183,10 +183,8 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>About</h4>
-          <ul>
-            <li><a href="/en/about.html">About</a></li>
-            <li><a href="/en/founder.html">Founder</a></li>            
-            <li><a href="/en/faculty.html">Faculty</a></li>
+          <ul>            
+            <li><a href="/en/founder.html">Founder</a></li>      
             <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
@@ -195,9 +193,7 @@
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>Links</h4>
-          <ul>
-            <li><a href="/en/academics.html">Academics</a></li>
-            <li><a href="/en/contact.html">Contact</a></li>
+          <ul>              
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
            </ul>
@@ -206,7 +202,7 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedas.university</p>
         </div>
       </div>
     </div>
