--- a/en/faculty.html
+++ b/en/faculty.html
@@ -113,7 +113,8 @@
         </ul>
         -->
         <a href="founder.html"><h4 class="mt-3">Dr. Venakta Chaganti</h4></a>
-        <p class="mb-0">Founder and Vēdic Scholar</p>
+        <p class="mb-0">Founder and Vēdic Scholar <br/>
+          <a class="a_underline" href="founder.html">profile page</a></p>
 
       </div>
      
