--- a/en/about.html
+++ b/en/about.html
@@ -105,7 +105,7 @@
 </section>
 <section class="section-padding">
   <div class="container">
-    <div class="row align-items-center">
+    <div class="row">
       <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
         <h3 id="vision" class="mb-3">Our Vision</h3>
         <p class="mb-4">Our vision is to empower students to value Vēdic knowledge and skills that
