--- a/en/profiles/prabhakara-sharma.html
+++ b/en/profiles/prabhakara-sharma.html
@@ -80,30 +80,25 @@
   </div>
 </nav>
 <!--MAIN HEADER AREA END -->
-<!--MAIN BANNER AREA START -->
-<div class="page-banner-area page-contact" id="page-banner">
-  <div class="overlay dark-overlay"></div>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 m-auto text-center col-sm-12 col-md-12">
-        <div class="banner-content content-padding">
-          <h1 class="text-white">Advisory Board Member</h1>
-          <p></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!--MAIN HEADER AREA END -->
+<!--
+@-@include('blocks/page-title.htm', {
+"title": "Advisory Board Member",
+"description": ""
+})
+
+-->
+
+<div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
 
 <section class="section-padding">
   <div class="container">
-    <div class="row align-items-center">
+    <h3 class="mb-3">Advisory Board Member: <br/>Arrojhwala Prabhakara Sharma, M.A., LL.M. M.Phil</h3>
+    <div class="row">
       <div class="col-lg-6 col-md-4 align-items-top" style="align-items: center;">
         <img src="/assets/images/profiles/prabhakara_sharma.jpg" alt="" class="img-fluid w-100 align-baseline">
       </div>
       <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
-        <h3 class="mb-3">Advisory Board Member: <br/>Arrojhwala Prabhakara Sharma, M.A., LL.M. M.Phil</h3>
+       
         <p class="mb-4">
           During the period from 1991 to 1997, Prabhakara Shrma Ji served as Principal for Justice Kumarayya College of Law, 
           Karimnagar, Telangana, India and taught, C.P.C, Transfer of property Act, Law of Torts and Indian contract Act.
