--- a/en/founder.html
+++ b/en/founder.html
@@ -89,12 +89,12 @@
 <div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
 <section class="section-padding">
   <div class="container">
-    <div class="row align-items-center">
+    <h3 class="mb-3">Founder: Dr. Venkata Chaganti</h3>
+    <div class="row">      
       <div class="col-lg-6 col-md-4">
         <img src="/assets/images/about/about-4.jpg" alt="" class="img-fluid w-100">
       </div>
-      <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
-        <h3 class="mb-3">Founder: Dr. Venkata Chaganti</h3>
+      <div class="col-lg-6 col-sm-12 col-md-8 mb-4">        
         <p class="mb-4">
           Dr. Venkata R Chaganti, founder, has PhD in Physics with Quantum Dots Specialization from Georgia State University.  
           His vast experience includes teaching and serving AI/ML industries in various capacities. 
