--- a/en/portfolio.html
+++ b/en/portfolio.html
@@ -33,30 +33,25 @@
   <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon">
 
 </head><body data-spy="scroll" data-target="#mainNav">
+ 
+  
 
-<!--
-<div class="bg-white">
-  <div class="container">
-    <h3 class="text-center p-2">
-      University of Applied Vēdic Sciences (Online)
-    </h3>
-  </div>
-</div>
--->
+
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">    
-    <div class="text-white text-center d-block d-sm-none">University of Applied Vēdic Sciences (Online)</div>
+    
     <a class="navbar-brand" href="/en/index.html">
       <img src="/assets/images/logo-white3.png" alt="University of Vēdic Sciences" class="img-fluid b-logo"
-      style="max-height:100px;">
+      >
     </a>
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon">
         <i class="fa fa-bars"></i>
       </span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="mainNav">      
+    <div class="collapse navbar-collapse justify-content-end" id="mainNav">          
       <ul class="navbar-nav ">
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/index.html">Home</a>
@@ -76,11 +71,13 @@
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/contact.html">Contact</a>
         </li>
-      </ul>
+      </ul>      
     </div>
   </div>
 </nav>
 <!--MAIN HEADER AREA END -->
+
+
 
 <section class="page-header">
 	<div class="container">
@@ -342,7 +339,7 @@
         <div class="footer-widget footer-link">
           <h4>About</h4>
           <ul>            
-            <li><a href="/en/founder.html">Founder</a></li>      
+            <li><a href="/en/profiles/venkata-chaganti.html">Founder</a></li>      
             <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
