--- a/en/profiles/venkata-chaganti.html
+++ b/en/profiles/venkata-chaganti.html
@@ -83,8 +83,9 @@
 "description": ""
 })
 -->
+
 <div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
-<section class="section-padding">
+<section id="chaganti" class="section-padding">
   <div class="container">
     <h3 class="mb-3">Founder: Dr. Venkata Ramana Chaganti</h3>
     <p>
@@ -96,7 +97,7 @@
     </p>
     <div class="row">      
       <div class="col-lg-6 col-md-4">
-        <img src="/assets/images/profiles/dr_venkata_chaganti.jpg" alt="" class="img-fluid w-100">
+        <img src="/assets/images/profiles/dr_venkata_chaganti_2.jpg" alt="" class="img-fluid w-100">
       </div>
       <div class="col-lg-6 col-sm-12 col-md-8 mb-4">        
         
@@ -334,7 +335,7 @@
       experiments to prove that Yajna can remove pollution, mitigate storms, mitigate hurricanes, 
       mitigate tornadoes, increase rainfall in drought hit areas. List of Yajnās and Yāgās performed. 
     </p>
-    <ol class="list pb-4">
+    <ol class="ol_num pb-4" aria-current="step">
       <li class="list-item">Panchāgnis (Atlanta USA 2011)</li>
       <li>Brihaspathi Sava (Atlanta, GA USA 2012)</li>
       <li>Sri Mahā Lakshmi Sroutha Mahā Yajna/Yāga (Atlanta, GA USA 2013)</li>
@@ -361,7 +362,7 @@
       The list goes on ...
     </p>
     <h4>Results of the Research on Yajnas</h4>
-    <ol class="pt-4">
+    <ol class="ol_num pt-4">
       <li>Panchāgnis (Atlanta USA 2011) – Practically related the Panchāgnis and the benefits of purification of mind and body. </li>
       <li>Brihaspathi Sava (Atlanta, GA USA 2012) – Reduced air pollution in a radius of 50 miles, decreased Fl in 
         stratosphere, purification of rainwater, purification of mind and body etc.</li> 
@@ -400,7 +401,7 @@
       The list goes on ...
     </p>
     <h4>Research Works and Publications</h4>
-    <ol class="pt-4">
+    <ol class="ol_num pt-4">
         <li>Is Sound property of Space or Vacuum? (2008) Joint Fall Meeting of the Texas and 
         Four Corners Sections of APS, October 17-18, 2008.</li>
         <li>Study of the structural and spectroscopic properties of Zn based clusters by density functional theory, 
