--- a/en/profiles/sarada-sonty.html
+++ b/en/profiles/sarada-sonty.html
@@ -125,8 +125,8 @@
 
 <section class="pt-4">
   <div class="container">
-    <h4>Some of Sarada’s works received Scholars Acclaim</h4>
-        <ul class="pb-4">
+    <h4 class="pb-4">Some of Sarada’s works received Scholars Acclaim</h4>
+        <ol class="ol_num pb-4">
           	<li><b>Nadanandam</b> – Genesis, History and Evolution of Sanskrit Music Treatises </li>	 
           <li><b>Thallapaka Annamacharyini Nritya Sangita Kalabhijnatha</b> Research work on Annamacharya compositions</li> 									 
           <li><b>Purnamidam</b> Research work on  Human Expression, Evolution of Fine Arts World view</li> 												 
@@ -134,7 +134,7 @@
           <li><b>Kalidasa Meghadutam</b> Translation in to Telugu with Commentary , Coauthored with Prof. Dr. Sarata Babu Ramavarapu</li> 						 	  
           <li><b>Chankya Neeti Sahasri</b> 1000 Maxims of Chanakya in Telugu, Coauthored with Prof. Dr. Sarat babu Ramavarapu</li>								  
           <li><b>Sharannikvaanam</b> - <b>Sharajjhari</b> - <b>Sharadyuthi</b> – Poetry Anthology Telugu Primer, Sanskrit Primer, Music Primer</li>
-        </ul>
+        </ol>
 
         <p class="pt-4 pb-4">
           Sarada Sonty  Founded  SAPNA- 501C3, SRI  foundation  promoting Cultural Art Traditions of India for 35 years. 
@@ -144,7 +144,7 @@
         </p>
 
 
-        <ul class="pb-4">
+        <ol class="ol_num pb-4">
           <li><b>Top 10 Living Telugu Legends in USA</b> – Paul Harris Award by Rotary</li>	 
         <li><b>Top 15 Women of Excellence</b> award from US Congressman Danny K Davis-2018</li> 									 
         <li><b>First Hindu Woman Service</b> in Ministry Commissioner of Board Dr. Tony Pretwinkle- 2018</li> 												 
@@ -153,7 +153,7 @@
         <li><b>Life time Achievement Awards</b> by  Congressman Danny K Davis  & Vanguri Foundation, 
           TANA, ATA, CTA, SVST, HTGC Awards for Excellence in Literature and Cultural Services.   
         </li>
-      </ul>
+      </ol>
   </div>
 </section>
 
