--- a/en/academics.html
+++ b/en/academics.html
@@ -315,7 +315,7 @@
         be awarded after the following requirements are met.      
       </p>
 
-      <ol class="pt-4 pb-4">
+      <ol class="ol_num pt-4 pb-4">
         <li>Pass in Mandatory courses</li>
         <li>Publish at least one peer reviewed article on the required topic</li>
         <li>Academical or Commercial use of the project</li>
