minor changes in the header and profile photos

--- a/en/courses/upanishads.html
+++ b/en/courses/upanishads.html
@@ -112,8 +112,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </a>
             </div><!-- logo end -->
   
-            <div class="col-lg-9 align-baseline">
-              <h4 class="text-white">University of Applied Vēdic Sciences</h4>
+            <div class="col-lg-9 align-baseline text-right pt-4">
+              <h2 class="text-white">University of Applied Vēdic Sciences (Online)</h2>
               <!--
                 <ul class="top-info-box">
                   <li>
@@ -195,7 +195,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
         
         <div class="nav-search d-block d-sm-none">
-          <label class="text-white">University of Applied Vēdic Sciences</label>
+          <label class="text-white font-weight-bold">University of Applied Vēdic Sciences</label>
         </div>
         <!--
         <div class="search-block" style="display: none;">
@@ -385,9 +385,9 @@ FACEBOOK: https://www.facebook.com/themefisher
     <div class="footer-main">
       <div class="container">
         <div class="row justify-content-between">
-          <div class="col-lg-4 col-md-6 footer-widget footer-about">
-            <h3 class="widget-title">About Us</h3>
-            <img loading="lazy" width="200px" class="footer-logo" src="/assets/images/logo-white.png" alt="university of Vedic Sciences">
+          <div class="col-lg-4 col-md-6 footer-widget footer-about align-items-center text-center">
+            <h3 class="widget-title text-left">Our University</h3>
+            <img loading="lazy" width="200px" class="footer-logo  align-middle" src="/assets/images/logo-white.png" alt="university of Vedic Sciences">
             <p class="text-white">University of Applied Vēdic Sciences (online) is a research-oriented academic 
               organization with emphasis on outcome-driven real-world projects extracted from Vēdas and Shāstrās.</p>
             <div class="footer-social">
@@ -459,7 +459,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 
         <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
           <button class="btn btn-primary" title="Back to Top">
-            <i class="fa fa-angle-double-up"></i>
+            <i class="fa fa-arrow-up text-white"></i>
           </button>
         </div>
 
