--- a/en/about.html
+++ b/en/about.html
@@ -314,7 +314,7 @@ FACEBOOK: https://www.facebook.com/themefisher
    </div>
    </section>
  
-   <section class="section-padding">
+   <section class="section-padding bg-yellow">
      <div class="container">
        <div class="row">
          <div class="col-lg-6 col-md-4">
