--- a/en/about.html
+++ b/en/about.html
@@ -321,7 +321,7 @@ FACEBOOK: https://www.facebook.com/themefisher
            <img src="/assets/images/about/online_class.jpg" alt="" class="img-fluid w-100">
          </div>
          <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
-           <h3 id="objectives" class="mb-3">Our Objectives</h3>          
+           <h3 id="objectives" class="mb-3 pt-4">Our Objectives</h3>          
              
            <ul class="about-list2 my-4">
              <li class="mb-2"><i class="far fa-check-circle"></i>              
